force-app/main/default/objects/GiftTransaction/fields/Anonymous_Donor__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Donor</label>
    <type>Checkbox</type>
</CustomField>