force-app/main/default/objects/GiftTransaction/fields/EmployerMatch__c.field-meta.xml
<CustomField>
    <fullName>EmployerMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer Match</label>
    <type>Checkbox</type>
</CustomField>