force-app/main/default/objects/GiftTransaction/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <inlineHelpText>The name of the given employer to match this gift transaction. (Only applicable if donor marks their donation as being matched by an employer)</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>