force-app/main/default/objects/GiftTransaction/fields/Number_of_Shares_Committed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares_Committed__c</fullName>
    <label>Number of Shares Committed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>