force-app/main/default/objects/GiftTransaction/fields/Value_of_Stock_at_time_of_commitment__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Stock_at_time_of_commitment__c</fullName>
    <label>Value of Stock at time of commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>