force-app/main/default/objects/GiftTransaction/fields/X52_Week_High__c.field-meta.xml
<CustomField>
    <fullName>X52_Week_High__c</fullName>
    <label>52 Week High</label>
    <length>255</length>
    <type>Text</type>
</CustomField>