force-app/main/default/objects/GiftTransaction/fields/X52_Week_Low__c.field-meta.xml
<CustomField>
    <fullName>X52_Week_Low__c</fullName>
    <label>52 Week Low</label>
    <length>255</length>
    <type>Text</type>
</CustomField>