force-app/main/default/objects/GiftTransaction/recordTypes/Donation.recordType-meta.xml
<RecordType>
    <fullName>Donation</fullName>
    <active>true</active>
    <label>Donation</label>
</RecordType>