force-app/main/default/objects/GiftTransaction/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <label>Ticket</label>
</RecordType>