force-app/main/default/objects/GiftTransaction/listViews/Major_Gift_Donor.listView-meta.xml
<ListView>
    <fullName>Major_Gift_Donor</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentAmount</field>
        <operation>greaterOrEqual</operation>
        <value>10000</value>
    </filters>
    <label>Major Gift Donor</label>
</ListView>